@@ -13,6 +13,9 @@ $(function() {
                 close_on_ok: false,
                 columns: 1,
                 width: 800,
+                delete_button: true,
+                delete_perm: "cpo",
+                delete_button_text: _("Revert to default"),
                 fields: [
                     { json_field: "NAME", post_field: "templatename", readonly: true, label: _("Name"), type: "text", validation: "notblank" },
                     { json_field: "HEADER", post_field: "header", label: _("Header"), type: "htmleditor", validation: "notblank", height: "150px", width: "720px" },
@@ -24,12 +27,28 @@ $(function() {
             const table = {
                 rows: controller.rows,
                 idcolumn: "NAME",
-                edit: async function(row) {
-                    await tableform.dialog_show_edit(dialog, row);
-                    tableform.fields_update_row(dialog.fields, row);
-                    await tableform.fields_post(dialog.fields, "mode=update&name=" + row.NAME, "htmltemplates");
-                    tableform.dialog_close();
-                    tableform.table_update(table);
+                edit: function(row) {
+                    tableform.dialog_show_edit(dialog, row, {
+                        
+                        onload: function() {
+                            if ( !controller.templates.hasOwnProperty(row.NAME) ) {
+                                $(".asm-dialog-deletebutton").hide();
+                            }
+                        },
+                        onchange: async function() {
+                            tableform.fields_update_row(dialog.fields, row);
+                            await tableform.fields_post(dialog.fields, "mode=update&name=" + row.NAME, "htmltemplates");
+                            tableform.dialog_close();
+                            tableform.table_update(table);
+                        },
+                        ondelete: function() {
+                            //Revert to default
+                            $("#header").htmleditor("value", controller.templates[row.NAME].head);
+                            $("#body").htmleditor("value", controller.templates[row.NAME].body);
+                            $("#footer").htmleditor("value", controller.templates[row.NAME].foot);
+                            tableform.dialog_enable_buttons();
+                        }
+                    });
                 },
                 columns: [
                     { field: "NAME", display: _("Name"), initialsort: true }
@@ -38,14 +57,17 @@ $(function() {
 
             const buttons = [
                 { id: "new", text: _("New Template"), icon: "new", enabled: "always", 
-                    click: async function() { 
-                        await tableform.dialog_show_add(dialog);
-                        let response = await tableform.fields_post(dialog.fields, "mode=create", "htmltemplates");
-                        let row = {};
-                        tableform.fields_update_row(dialog.fields, row);
-                        controller.rows.push(row);
-                        tableform.table_update(table);
-                        tableform.dialog_close();
+                    click: function() { 
+                        tableform.dialog_show_add(dialog, {
+                            onadd: async function() {
+                                await tableform.fields_post(dialog.fields, "mode=create", "htmltemplates");
+                                let row = {};
+                                tableform.fields_update_row(dialog.fields, row);
+                                controller.rows.push(row);
+                                tableform.table_update(table);
+                                tableform.dialog_close();
+                            }
+                        });
                     } 
                 },
                 { id: "clone", text: _("Clone"), icon: "copy", enabled: "one", 
