@@ -1,6 +1,7 @@
 49
 ================
 
+02/12/24 Added revert button to HTML templates #1581
 02/12/24 Only choose the default email type if it exists #1546
 02/12/24 Updated animalview template to "make nicer" #1210
 01/12/24 Add ustyle/utemplate parameter to animalview #1580
